overlap fix for the right side
increased the distance to the token, if it is displayed on the right side, so it does not overlap with the default icons

--- a/styles/resource-tracker.css
+++ b/styles/resource-tracker.css
@@ -21,7 +21,7 @@
 }
 
 .col.resource-tracker-column-right {
-	right: -180px;
+	right: -200px;
 }
 
 .resource-tracker-row {
